--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 				<h3>About Me:</h3>
 					<h4>Nothing has changed.</h4>
 					<h4>This is just a trick of the mind.</h4>
+					<h4>This is just an update.</h4>
 			</div>
 
 		  </body>
